# sklearn_pca

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  environment.yml  pca.py  pyproject.toml
src/sklearn_pca/: pca.py
src/sklearn_pca.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: data1.tsv  data2.tsv  metadata.csv
